--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
-      - run: npx create-docusaurus@latest . classic
+      #- run: npx create-docusaurus@latest . classic
       - run: |
           pwd
           ls -al
